# winzy-whitelist

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_winzy_whitelist.py
winzy_whitelist/: __init__.py
